Lint/deploy fix - prod live

--- a/src/app.html
+++ b/src/app.html
@@ -1,1 +1,20 @@
-<!doctype html>\n<html lang="en">\n	<head>\n		<meta charset="utf-8" />\n		<link rel="icon" href="%sveltekit.assets%/favicon.png" />\n		<meta name="viewport" content="width=device-width, initial-scale=1" />\n		%sveltekit.head%\n	</head>\n	<body data-sveltekit-preload-data="hover">\n		<div style="display: contents">%sveltekit.body%</div>\n	</body>\n</html>\n
+<!doctype html>\n
+<html lang="en">
+  \n
+  <head>
+    \n
+    <meta charset="utf-8" />
+    \n
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    \n
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    \n %sveltekit.head%\n</head
+  >\n
+  <body data-sveltekit-preload-data="hover">
+    \n
+    <div style="display: contents">%sveltekit.body%</div>
+    \n
+  </body>
+  \n
+</html>
+\n
